--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   build:
     runs-on: windows-latest
@@ -37,6 +41,21 @@ jobs:
     
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
+      id: artifact-upload
       with:
         name: IntelAvatar-build
         path: dist/
+    
+    - name: Comment PR with artifact link
+      if: github.event_name == 'pull_request'
+      uses: actions/github-script@v7
+      with:
+        script: |
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: `✅ Build successful! 
+            
+            📦 Download artifact: [IntelAvatar-build](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})`
+          })
